--- a/ansible/install-kubernetes.yml
+++ b/ansible/install-kubernetes.yml
@@ -20,7 +20,7 @@
 
   - name: Enable IP Forwarding
     ansible.builtin.shell: |
-      cat <<EOF | sudo tee /etc/sysctl.d/k8s.conf
+      cat <<EOF | tee /etc/sysctl.d/k8s.conf
       net.ipv4.ip_forward = 1
       EOF
 
@@ -41,7 +41,7 @@
   - name: Configure containerd
     ansible.builtin.shell: |
       mkdir -p /etc/containerd
-      containerd config default | sudo tee /etc/containerd/config.toml
+      containerd config default | tee /etc/containerd/config.toml
       sed -i 's/SystemdCgroup = false/SystemdCgroup = true/g' /etc/containerd/config.toml
       systemctl restart containerd
 
@@ -90,7 +90,7 @@
       - kubectl
 
 
-- name: init-control-plane
+- name: initialise-kubeadm
   hosts: tag_control_plane
   become: true
 
@@ -128,7 +128,7 @@
     delegate_facts: True
 
 
-- name: join-workers
+- name: join-workers-to-cluster
   hosts: tag_worker_node
   become: true
 
@@ -143,6 +143,7 @@
 
 - name: install-cilium
   hosts: tag_control_plane
+  become: true
 
   tasks:
 
@@ -153,7 +154,7 @@
       if [ "$(uname -m)" = "aarch64" ]; then CLI_ARCH=arm64; fi
       curl -L --fail --remote-name-all https://github.com/cilium/cilium-cli/releases/download/${CILIUM_CLI_VERSION}/cilium-linux-${CLI_ARCH}.tar.gz{,.sha256sum}
       sha256sum --check cilium-linux-${CLI_ARCH}.tar.gz.sha256sum
-      sudo tar xzvfC cilium-linux-${CLI_ARCH}.tar.gz /usr/local/bin
+      tar xzvfC cilium-linux-${CLI_ARCH}.tar.gz /usr/local/bin
       rm cilium-linux-${CLI_ARCH}.tar.gz cilium-linux-${CLI_ARCH}.tar.gz.sha256sum
 
   - name: Check Cilium version
