--- a/ansible/inventory/aws_ec2.yml
+++ b/ansible/inventory/aws_ec2.yml
@@ -1,3 +1,4 @@
+# refer to https://docs.ansible.com/projects/ansible/latest/collections/amazon/aws/docsite/aws_ec2_guide.html
 plugin: amazon.aws.aws_ec2
 regions:
   - eu-west-2
@@ -11,5 +12,16 @@ keyed_groups:
     prefix: tag
 hostnames:
   - tag:name
-compose:
-  ansible_host: public_dns_name # or you can use public_ip_address
+compose: # these variables below apply to every ec2 instance
+  ansible_host: private_ip_address # private ip needs to be used in order for ansible to be able to ssh into the bastion host and then ssh into the private instances # if your ec2 instances are on public subnets, you will need to use (public_ip_address or public_dns_name) since you need to connect to the public addresses
+  ansible_ssh_private_key_file: '"~/.ssh/playground"'
+  ansible_user: '"ubuntu"'
+  ansible_ssh_common_args: >- 
+    '"-o ProxyCommand="ssh
+    -i ~/.ssh/playground
+    -W %h:%p
+    -q {{ ansible_user }}@{{ hostvars["bastion-host"]["public_ip_address"] }}""'
+
+# I had used this link to get the ansible_ssh_common_args variable to work : https://stackoverflow.com/questions/73198103/use-of-hosts-in-ansible-ssh-common-args
+
+# some of the variables for the 'compose' section above were fiddly to get working as I had to trial and error with different combinations of "" and '' to get them to be recognised
