Fixing Debug tasks for containerd and Cilium checks in Ansible Roles
- Added debug output for containerd configuration existence and systemd cgroup value.
- Updated Cilium version check output for clarity and removed commented-out code.

--- a/ansible/roles/2-install-containerd/tasks/main.yml
+++ b/ansible/roles/2-install-containerd/tasks/main.yml
@@ -15,6 +15,17 @@
     register: systemd_cgroup
     when: containerd_config.stat.exists
 
+  - name: Containerd Config Exists Check Output
+    ansible.builtin.debug:
+      msg:
+      - "Config exists: {{ containerd_config.stat.exists }}"
+
+  - name: SystemdCgroup Value Check Output
+    ansible.builtin.debug:
+      msg:
+      - "{{ systemd_cgroup.stdout }}"
+    when: containerd_config.stat.exists
+
   - name: Configure containerd
     ansible.builtin.shell: |
       mkdir -p /etc/containerd
