--- a/ansible/playbooks/install-kubernetes.yml
+++ b/ansible/playbooks/install-kubernetes.yml
@@ -2,37 +2,37 @@
   hosts: tag_control_plane:tag_worker_node
   become: true
   roles:
-    - 1-prerequisites
+    - ../roles/1-prerequisites
 
 - name: install-containerd
   hosts: tag_control_plane:tag_worker_node
   become: true
   roles:
-    - 2-install-containerd
+    - ../roles/2-install-containerd
 
 - name: install-kubernetes
   hosts: tag_control_plane:tag_worker_node
   become: true
   vars_files:
-  - ./variables.yml
+  - ../variables.yml
   roles:
-    - 3-install-kubernetes
+    - ../roles/3-install-kubernetes
 
 - name: initialise-kubeadm
   hosts: tag_control_plane
   become: true
   roles:
-    - 4-initialise-kubeadm
+    - ../roles/4-initialise-kubeadm
 
 - name: join-workers-to-cluster
   hosts: tag_worker_node
   become: true
   roles:
-    - 5-join-workers-to-cluster
+    - ../roles/5-join-workers-to-cluster
 
 - name: install-cilium
   hosts: tag_control_plane
   vars_files:
-  - ./variables.yml
+  - ../variables.yml
   roles:
-    - 6-install-cilium
+    - ../roles/6-install-cilium
